[tool.poetry]
name = "laval-bot"
version = "0.1.0"
description = "Le meilleur bot du monde"
authors = ["LavaL <nicolaon.romain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
replit = "^2.0.0"
ctx = "^0.1.2"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
